--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,25 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* src/index.css */
+.viewport {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+
+#interactive.viewport {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+canvas.drawing,
+canvas.drawingBuffer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
